@@ -10,8 +10,11 @@ export(round_ps)
 export(univ)
 import(car)
 import(pbkrtest)
+importFrom(coin,approximate)
 importFrom(coin,median_test)
 importFrom(coin,oneway_test)
+importFrom(coin,pvalue)
+importFrom(coin,statistic)
 importFrom(coin,wilcox_test)
 importFrom(lme4,glmer)
 importFrom(lme4,lmer)
